fix: update index refresh interval snippet

--- a/src/docs/5.33.x/performance-and-load-benchmark/headless-cms/performance-tuning.mdx
+++ b/src/docs/5.33.x/performance-and-load-benchmark/headless-cms/performance-tuning.mdx
@@ -133,16 +133,14 @@ export default createCoreApp({
 The second part of tuning the OpenSearch is tweaking certain configuration parameters of the service itself. Here are a couple of parameters we recommend you adjust:
 
 **Increase the refresh interval**
-Refresh is an operation that indexes the records and makes them available for searching. By default, this action is triggered every second on all records that received one search request in the last 30 seconds. This action is very costly, especially if you have ongoing indexing activities running on your cluster and it will hurt your indexing speed. We recommend increasing this to `30s` and then testing if you need to increase it more or decrease it. To make the change you need to modify `index.refresh_interval` parameter. 
-
-// please check if this is the right way?
-
+Refresh is an operation that indexes the records and makes them available for searching. By default, this action is triggered every second on all records that received one search request in the last 30 seconds. This action is very costly, especially if you have ongoing indexing activities running on your cluster and it will hurt your indexing speed. We recommend increasing this to `30s` and then testing if you need to increase it more or decrease it. To make the change you need to modify `index.refresh_interval` parameter.
 ```
 PUT https://domain-name.region.es.amazonaws.com/source-index/_settings
 {
-  "settings": {
-    "index.refresh_interval": "30s", 
-  }
+	"settings": {
+		"index.refresh_interval": "30s"
+	}
+}
 ```
 
 **Increase indexing buffer size**
